--- a/Diagnosis.App/Controls/Forms/AgePicker.xaml
+++ b/Diagnosis.App/Controls/Forms/AgePicker.xaml
@@ -19,7 +19,7 @@
 
         <TextBox Text="{Binding Age, Mode=TwoWay, TargetNullValue=''}" Width="50" Margin="20,0,5,0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" IsTabStop="False">
             <controls:WatermarkService.Watermark>
-                <TextBlock Style="{StaticResource watermark}">Возраст</TextBlock>
+                <TextBlock Style="{StaticResource watermark}" Margin="-15,0,0,0">Возраст</TextBlock>
             </controls:WatermarkService.Watermark>
         </TextBox>
         <TextBlock Text="{Binding Age, Converter={StaticResource ageLabel}}" Width="40" VerticalAlignment="Center"></TextBlock>
