--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -1,28 +1,38 @@
 ﻿<UserControl x:Class="Diagnosis.App.Screens.Patients"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="36" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Style="{StaticResource ScreenTitle}">Пациенты</TextBlock>
-        
-        <controls:FloatSearch x:Name="search" 
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Style="{StaticResource ScreenTitle}" Grid.ColumnSpan="2"><Run Text="Пациенты" /></TextBlock>
+            <Button Content="Новый" Grid.Column="2" VerticalAlignment="Center" Command="{Binding AddPatientCommand}"/>
+        </Grid>
+
+        <controls:FloatSearch x:Name="search"
                               DataContext="{Binding Search}"
-                              Grid.Row="1"/>
-        
+                                   Grid.Row="2"
+ />
+
         <ListBox x:Name="patients"
                  ItemsSource="{Binding Patients}"
                  SelectedItem="{Binding CurrentPatient}"
-                 Grid.Row="2">
+                 Grid.Row="3">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <DockPanel>
