--- a/Diagnosis.App/Controls/Directory/TileItem.xaml
+++ b/Diagnosis.App/Controls/Directory/TileItem.xaml
@@ -114,8 +114,8 @@
                         Visibility="{Binding DataContext.Search.IsSearchActive, ElementName=root, Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}"
                         DataContext="{Binding Search}">
                 <controls:FloatSearch.InputBindings>
-                    <KeyBinding Key="Escape" Command="{Binding DataContext.Search.ToggleSearchCommand, ElementName=root}"></KeyBinding>
-                    <KeyBinding Key="Enter" Command="{Binding DataContext.Search.SelectCommand, ElementName=root}"></KeyBinding>
+                    <KeyBinding Key="Escape" Command="{Binding ToggleSearchCommand}"></KeyBinding>
+                    <KeyBinding Key="Enter" Command="{Binding SelectCommand}"></KeyBinding>
                 </controls:FloatSearch.InputBindings>
             </controls:FloatSearch>
 
