--- a/Diagnosis.App/Controls/Directory/TreeItem.xaml
+++ b/Diagnosis.App/Controls/Directory/TreeItem.xaml
@@ -56,13 +56,13 @@
 			Grid.Row="1"
 			Grid.Column="1"
             Grid.ColumnSpan="2"
-			Visibility="{Binding DataContext.Search.IsSearchActive, ElementName=treeItem, Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}"
-            controls:FocusExtension.IsFocused="{Binding DataContext.Search.IsSearchFocused, ElementName=treeItem}"
+			Visibility="{Binding IsSearchActive, Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}"
+            controls:FocusExtension.IsFocused="{Binding IsSearchFocused}"
             DataContext="{Binding Search}"
 >
             <controls:FloatSearch.InputBindings>
-                <KeyBinding Key="Escape" Command="{Binding DataContext.Search.ToggleSearchCommand, ElementName=treeItem}"></KeyBinding>
-                <KeyBinding Key="Enter" Command="{Binding DataContext.Search.SelectCommand, ElementName=treeItem}"></KeyBinding>
+                <KeyBinding Key="Escape" Command="{Binding ToggleSearchCommand}"></KeyBinding>
+                <KeyBinding Key="Enter" Command="{Binding SelectCommand}"></KeyBinding>
             </controls:FloatSearch.InputBindings>
         </controls:FloatSearch>
     </Grid>
