--- a/Diagnosis.App/Controls/Card/Course.xaml
+++ b/Diagnosis.App/Controls/Card/Course.xaml
@@ -27,7 +27,7 @@
                 <ColumnDefinition Width="30"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
+
             <Expander Style="{StaticResource ExpanderStyleFixed}"
                   IsExpanded="{Binding IsAppointmentsVisible}"
                   Focusable="False">
@@ -55,18 +55,19 @@
                 HorizontalAlignment="Right" 
                 VerticalAlignment="Top"
                 Visibility="{Binding Editable.CanBeDeleted, Converter={StaticResource BooleanToVisibilityConverter}}">×</Button>
-        </Grid>        
+        </Grid>
 
         <StackPanel Grid.Row="1"
                     Visibility="{Binding IsAppointmentsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
             <ListView x:Name="appointments"
+                      HorizontalContentAlignment="Stretch"
                   ItemsSource="{Binding Appointments}"
                   SelectedItem="{Binding SelectedAppointment}"
                   Style="{StaticResource list}"                      
                   MaxHeight="200">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <DockPanel MinWidth="150">
+                        <DockPanel>
                             <DockPanel DockPanel.Dock="Top">
                                 <TextBlock Text="{Binding DateTime, StringFormat='{}{0:d}'}" />
                                 <TextBlock Text="{Binding Doctor.ShortName}"
@@ -75,9 +76,9 @@
                             <ItemsControl ItemsSource="{Binding HealthRecords}">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Name}" />
+                                        <TextBlock Text="{Binding Name}" TextWrapping="Wrap"/>
                                     </DataTemplate>
-                                </ItemsControl.ItemTemplate>
+                                </ItemsControl.ItemTemplate>                                
                             </ItemsControl>
                         </DockPanel>
                     </DataTemplate>
@@ -88,6 +89,6 @@
                 Margin="0,5,0,0"
                 Visibility="{Binding IsEnded, Converter={StaticResource NegBooleanToVisibilityConverter}}">
                 Новый осмотр</Button>
-        </StackPanel>        
+        </StackPanel>
     </Grid>
 </UserControl>
