--- a/Diagnosis.App/Controls/FloatSearch.xaml
+++ b/Diagnosis.App/Controls/FloatSearch.xaml
@@ -51,7 +51,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <DockPanel>
-                            <TextBlock Text="{Binding Name}" />
+                            <TextBlock Text="{Binding SearchText}" />
                         </DockPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
