add TreeItemLight without search and editor for speed up loading tree

--- a/Diagnosis.App/Controls/Directory/FullTree.xaml
+++ b/Diagnosis.App/Controls/Directory/FullTree.xaml
@@ -35,8 +35,9 @@
             <HierarchicalDataTemplate
                 x:Key="fullTreeItemTemplate"
                 ItemsSource="{Binding Children}">
-                <controls:TreeItem />
+                <controls:TreeItemLight />
             </HierarchicalDataTemplate>
+
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
